--- a/phil/tools/package.json
+++ b/phil/tools/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-async-generator-functions": "^6.24.1",
+    "dotenv": "^5.0.0",
     "octokat": "^0.6.4"
   }
 }
